--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "serve": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/yargs": "^17.0.10",
     "chalk": "^4.1.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
     "yargs": "^17.5.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.4",
+    "@types/yargs": "^17.0.10",
+    "nodemon": "^2.0.19"
   }
 }
